# dnf-plugin-lait

./: CMakeLists.txt  README.md  dnf-plugin-lait.spec
mock/: CMakeLists.txt  mock.cfg.template
po/: CMakeLists.txt  dnf-plugin-lait.pot  zh_CN.po
src/: CMakeLists.txt  lait.py  lait.sh
